--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -80,7 +80,7 @@
     <div class="info">
         <div>
             <% if (userData.avatar) { %>
-                <h3>Your Avatar</h3>
+                <!-- <h3>Your Avatar</h3> -->
                 <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 100px; height: 100px; border-radius: 50%;">
             <% } else { %>
                 <img style="width: 150px;" src="../IMG/Untitled.png">
@@ -107,9 +107,9 @@
                     <div class="user_post">
                         <div class="posts">
                             <div class="pros">
-                                <% if (postAt_past.posterAvatar) { %>
-                                <h3>Your Avatar</h3>
-                                <img src="data:image/png;base64,<%= post.avatar %>" alt="User Avatar" style="width: 100px; height: 100px; border-radius: 50%;">
+                                <% if (userData.avatar) { %>
+                                    <!-- <h3>Your Avatar</h3> -->
+                                    <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                                 <% } else { %>
                                     <img style="width: 50px;" src="../IMG/Untitled.png">
                                 <% } %>
