--- a/Static/member/editProfile.ejs
+++ b/Static/member/editProfile.ejs
@@ -18,14 +18,14 @@
 
         <div class="right">
             <h2>Profile Information</h2>
-            <form action="/profile/update" method="post" enctype="multipart/form-data">
+            <form action="/profile_update" method="post" enctype="multipart/form-data">
 
                 <!-- ✅ แสดงรูปโปรไฟล์เดิม -->
                 <div class="avatar-container">
                     <% if (userData.avatar) { %>
                         <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" class="profile-pic">
                     <% } else { %>
-                        <img src="../IMG/default-avatar.png" alt="Default Avatar" class="profile-pic">
+                        <img src="../IMG/Untitled.png" alt="Default Avatar" class="profile-pic">
                     <% } %>
                 </div>
 
@@ -49,7 +49,7 @@
                 <input type="number" name="age" id="age" value="<%= userData.age %>" required>
 
                 <label for="interests">Interests</label>
-                <input type="text" name="interests" id="interests" value="<%= userData.interests %>" required>
+                <input type="text" name="interested" id="interested" value="<%= userData.interests %>" required>
 
                 <div class="save-btn">
                     <button type="submit">Save Changes</button>
