--- a/Static/member/Myprofile.ejs
+++ b/Static/member/Myprofile.ejs
@@ -117,7 +117,7 @@
                         <div class="posts">
                             <div class="pros">
                                 <!-- <img style="width: 50px;" src="../IMG/Untitled.png" alt="Default Avatar"> -->
-                                <% if (userData.avatar) { %> <!--เอาข้อมูลโปรไฟล์จากuser-->
+                                <% if (post.avatar) { %> <!--เอาข้อมูลโปรไฟล์จากuser-->
                                     <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                                 <% } else { %>
                                     <img style="width: 150px;" src="../IMG/Untitled.png">
