--- a/Static/member/Myprofile.ejs
+++ b/Static/member/Myprofile.ejs
@@ -122,7 +122,7 @@
                                 <% } else { %>
                                     <img style="width: 150px;" src="../IMG/Untitled.png">
                                 <% } %>
-                                <p>โพสต์โดย: <%= post.ownerName || "ไม่ทราบชื่อ" %></p>
+                                <p> <%= post.ownerName %></p>
                             </div>
                             <div>
                                 <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
