--- a/Static/css/home.css
+++ b/Static/css/home.css
@@ -470,4 +470,10 @@
     flex-direction: row;
     align-items: center;
 }
+.icon a.interes:hover{
+    color: #b83039;  
+}
+.join-form {
+    display: none;
+}
 
