--- a/Static/member/Myprofile.ejs
+++ b/Static/member/Myprofile.ejs
@@ -99,7 +99,7 @@
         </div>
 
         <a href="/profile_edit">
-            <button type="button">Edit Profile</button>
+            <button class="edit-pro" type="button">Edit Profile</button>
         </a>
     </div>
 
