--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -96,7 +96,7 @@
             <p>Garder: <%= userData.gender %>, age <%= userData.age %></p>
             <p>Interested sports: <%= userData.Interested %> </p><br>
             <a href="/home">
-                <button type="button">Send message</button>
+                <button class="send-mess" type="button">Send message</button>
             </a>
             <!-- <p>2 friends</p> -->
         </div>
