--- a/Static/member/Myprofile.ejs
+++ b/Static/member/Myprofile.ejs
@@ -70,7 +70,7 @@
             <i class='bx bx-search'></i>
         </div>
         <div class="right">
-            <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
+            <a href="/home"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
             <% if (userData && userData.avatar) { %>
