--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -13,28 +13,9 @@
 
 <body>
     <div class="float-chat" id="chat-button">
-        <i class='bx bx-chat' style='color:#fffcfc'></i>
+        <a href="/showchat"><i class='bx bx-chat' style='color:#fffcfc'></i></a>
     </div>
-
-    <div id="chat-pop-up" class="chat-pop-up">
-        <div class="chat" onclick="ChatOpen()">
-            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
-            <span>Friend 1</span>
-        </div>
-        <div class="chat" onclick="ChatOpen()">
-            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
-            <span>Friend 2</span>
-        </div>
-        <div class="chat" onclick="ChatOpen()">
-            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
-            <span>Friend 3</span>
-        </div>
-        <div class="chat" onclick="ChatOpen()">
-            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
-            <span>Friend 4</span>
-        </div>
-    </div>
-
+    
     <div id="float-chat-user" class="float-chat-user">
         <div class="top">
             <div class="infoooo">
@@ -116,7 +97,7 @@
         <div class="right">
             <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
-            <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
+            <!-- <a href="/showchat"><i id="chat" class='bx bx-chat' style='color:#fffcfc'></i></a> -->
             <a href="/profile"><% if (userAvatar) { %>
                 <img src="data:image/png;base64,<%= userAvatar %>" alt="Your Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
             <% } else { %>
@@ -214,10 +195,6 @@
                     <p>⚠️ ไม่มีโพสต์</p>
                 <% } %>
             </div>
-            
-                
-            
-            
             
         </div>
         <div class="tag">
