--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -15,6 +15,52 @@
         <i class='bx bx-chat' style='color:#fffcfc'></i>
     </div>
 
+    <div id="chat-pop-up" class="chat-pop-up">
+        <div class="chat" onclick="ChatOpen()">
+            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+            <span>Friend 1</span>
+        </div>
+        <div class="chat" onclick="ChatOpen()">
+            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+            <span>Friend 2</span>
+        </div>
+        <div class="chat" onclick="ChatOpen()">
+            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+            <span>Friend 3</span>
+        </div>
+        <div class="chat" onclick="ChatOpen()">
+            <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+            <span>Friend 4</span>
+        </div>
+    </div>
+
+    <div id="float-chat-user" class="float-chat-user">
+        <div class="top">
+            <div class="infoooo">
+                <div class="info">
+                    <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+                </div>
+                <span>Friend 1</span>
+            </div>
+            <div class="exit">
+                <i class='bx bx-x' onclick="closechat()"></i>
+            </div>
+        </div>
+        <div class="chat-text">
+        </div>
+        <div class="bottom">
+            <div class="split">
+                <a href=""><i class='bx bxs-photo-album'></i></a>
+                <a href=""><i class='bx bxs-location-plus'></i></a>
+                <a href=""><i class='bx bxs-file-gif'></i></a>
+            </div>
+            <div class="send-text">
+                <input type="text">
+                <i class='bx bx-send'></i>
+            </div>
+        </div>
+    </div>
+
     <div class="nav">
         <div class="left">
             <a href="/home"><img style="width: 40px;" src="../IMG/Logo2.png"></a>
@@ -23,10 +69,11 @@
         </div>
         <div class="right">
             <a href="/home"><i class='bx bx-home' style='color:#fffcfc'></i></a>
+            <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
             <% if (userData.avatar) { %>
-                <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" 
-                     style="width: 50px; height: 50px; border-radius: 50%;">
+                <!-- <h3>Your Avatar</h3> -->
+                <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
             <% } else { %>
                 <img style="width: 150px;" src="../IMG/Untitled.png">
             <% } %>
@@ -36,21 +83,29 @@
     <div class="info">
         <div>
             <% if (userData.avatar) { %>
-                <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" 
-                     style="width: 100px; height: 100px; border-radius: 50%;">
+                <!-- <h3>Your Avatar</h3> -->
+                <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 100px; height: 100px; border-radius: 50%;">
             <% } else { %>
                 <img style="width: 150px;" src="../IMG/Untitled.png">
             <% } %>
         </div>
         <div class="detail">
             <h1><%= username %></h1><br>
-            <p>Gender: <%= userData.gender %>, age <%= userData.age %></p>
-            <p>Interested sports: <%= userData.Interested %></p><br>
-
-            <!-- ใช้โค้ดจาก main -->
-            <a href="/home">
-                <button class="send-mess" type="button">Send message</button>
-            </a>
+            <p>Garder: <%= userData.gender %>, age <%= userData.age %></p>
+            
+            <p>Interested sports: <%= userData.Interested %> </p><br>
+            <form action="/chat/create_chat" method="post">
+                <input  hidden type="text" name="receiverName" value="<%= userData.username %>">
+                <input hidden type="text" name="receiverID" value="<%= userData.id %>">
+            
+                <div class="submit">
+                    <button type="submit">Send message</button>
+                </div>
+            </form>
+            
+                
+           
+            <!-- <p>2 friends</p> -->
         </div>
     </div>
 
@@ -68,8 +123,8 @@
                         <div class="posts">
                             <div class="pros">
                                 <% if (userData.avatar) { %>
-                                    <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" 
-                                         style="width: 50px; height: 50px; border-radius: 50%;">
+                                    <!-- <h3>Your Avatar</h3> -->
+                                    <img src="data:image/png;base64,<%= userData.avatar %>" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                                 <% } else { %>
                                     <img style="width: 50px;" src="../IMG/Untitled.png">
                                 <% } %>
@@ -99,7 +154,29 @@
             <% } else { %>
                     <p>⚠️ ไม่มีโพสต์</p>
             <% } %>
-        </div>
+            <!-- <div class="user_post">
+                <div class="posts">
+                    <div class="pros">
+                        <img src="../IMG/Untitled.png">
+                        <p>Somchai_UP</p>
+                    </div>
+                    <div>
+                        <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
+                    </div>
+                </div>
+                <div class="title">
+                    <p>หาเพื่อนเล่นบาสครับ😥 #แบดมินตัน เวลานัด 14.00</p>
+                </div>
+                <div class="badmi">
+                    <img src="../IMG/Basketball-Court-Mahasarakham-University.jpg">
+                </div>
+                <div class="icon">
+                    <a href=""><i class='bx bxs-heart'></i>Interested</a>
+                    <a href=""><i class='bx bxs-comment-detail'></i>Comment</a>
+                    <a href=""><i class='bx bx-group'></i>Join</a>
+                    <a href=""><i class='bx bxs-share'></i>Share</a>
+                </div>
+            </div> -->
     </div>
 </body>
 
