--- a/Static/css/home.css
+++ b/Static/css/home.css
@@ -389,7 +389,7 @@
     height: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
+/* ***************************************ที่ตี๋เพิ่ม*********************************** */
 .chat-list {
     max-height: 300px; /* จำกัดความสูงของรายชื่อแชท */
     overflow-y: auto; /* เปิดใช้งานการเลื่อน */
@@ -412,6 +412,8 @@
     background: #aaa;
     border-radius: 5px;
 }
+
+/* ***************************************ที่ตี๋เพิ่ม*********************************** */
 
 #chat-profile {
     margin-right: 5px;
