--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -14,6 +14,7 @@
 <body>
     <div class="float-chat" id="chat-button">
         <a href="/showchat"><i class='bx bx-chat' style='color:#fffcfc'></i></a>
+        <div class="chat-notif" id="chat-notif"></div> <!-- จุดแดงแจ้งเตือน -->
     </div>
     
     <div id="float-chat-user" class="float-chat-user">
@@ -95,7 +96,7 @@
             <i class='bx bx-search'></i>
         </div>
         <div class="right">
-            <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
+            <a href="#"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <!-- <a href="/showchat"><i id="chat" class='bx bx-chat' style='color:#fffcfc'></i></a> -->
             <a href="/profile"><% if (userAvatar) { %>
